welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:-6: error: Missing closing brace `}' assumed here
try {
^lastDigit:1: error: expected class or object definition
def lastDigit(a:Int, b:Int, c:Int):Boolean = {return (a%10 == b%10 || a%10 == c%10 || c%10 == b%10)  
^